feat: implement user authentication with registration and profile retrieval endpoints

--- a/.env.example
+++ b/.env.example
@@ -65,4 +65,4 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 VITE_APP_NAME="${APP_NAME}"
 
 L5_SWAGGER_GENERATE_ALWAYS=true
-L5_SWAGGER_CONST_HOST=http://localhost:8000
+L5_SWAGGER_CONST_HOST=http://localhost:8000/api/v1
