--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "$schema": "https://getcomposer.org/schema.json",
     "name": "laravel/laravel",
     "type": "project",
-    "description": "The skeleton application for the Laravel framework.",
+    "description": "The skeleton of the Laravel application.",
     "keywords": [
         "laravel",
         "framework"
